--- a/main.ipynb
+++ b/main.ipynb
@@ -76,7 +76,7 @@
     }
    ],
    "source": [
-    "dataset = pd.read_csv('IMDB.csv')\n",
+    "dataset = pd.read_csv('Desktop/IMDB.csv')\n",
     "print(f\"Dataset shape : {dataset.shape}\\n\")\n",
     "print(f\"Dataset head : \\n{dataset.head()}\\n\")"
    ]
